# drilldown-table

./: .gitattributes  .gitignore  README.md  SKILL.md  drilldown_table.py  render_docx_png.py  render_png.py  render_pptx_png.py  sync.ps1
.claude-plugin/: plugin.json
app/: RELEASE.md  app.py  build.ps1  build_web.py  excel_io.py  make_input_guides.py  make_previews.py  pyodide_verify.mjs  sign.ps1  사용법.txt  웹버전_안내.txt
commands/: drilldown-table.md
docs/: make_screenshots.py
examples/: sample_both.yaml
rust/: Cargo.toml  SPEC.md  TEST_REPORT.md
rust/fixtures/: compare_ir.py
rust/fixtures/inputs/: multilevel.yaml  twolevel.yaml
rust/fixtures/ir/: both_both_color.json  both_both_grey.json  both_both_mono.json  multilevel_column_color.json  multilevel_column_grey.json  multilevel_column_mono.json  multilevel_row_color.json  multilevel_row_grey.json  multilevel_row_mono.json  twolevel_column_color.json  twolevel_column_grey.json  twolevel_column_mono.json  twolevel_row_color.json  twolevel_row_grey.json  twolevel_row_mono.json
rust/src/: main.rs
samples/: drilldown_v14_color.docx  drilldown_v14_color.pptx  drilldown_v14_color.xlsx  drilldown_v14_grey.docx  drilldown_v14_grey.pptx  drilldown_v14_grey.xlsx  drilldown_v14_mono.docx  drilldown_v14_mono.pptx  drilldown_v14_mono.xlsx
